Делает sticky кнопку

--- a/src/main.html
+++ b/src/main.html
@@ -55,10 +55,10 @@
                   <span class="hero__aside-row-value section-text--stroked">Youtube</span>
                 </p>
               </div>
-              <a href="#" class="button-primary hero__button">
+<!--               <a href="#register" class="button-primary hero__button">
                 <span class="button__text">Регистрация</span>
               </a>
-              <div class="hero__char" style="background-image: url('./img/hero/hero-char.png');">
+ -->              <div class="hero__char" style="background-image: url('./img/hero/hero-char.png');">
                 <div class="hero__char-buble">
                 </div>
               </div>
@@ -272,7 +272,7 @@
           </div>
         </section>
 
-        <section class="section book">
+        <section class="section book" id="register">
           <div class="container book__container">
             <h2 class="section-title book__title">
               <span class="section-title__arrow"></span>
