--- a/src/tpls/footer.html
+++ b/src/tpls/footer.html
@@ -1,3 +1,5 @@
+<a href="#register" class="button-primary button-sticky"> <span class="button__text">Регистрация</span> </a>
+
 <footer class="footer">
   <div class="footer__drop-left" style="background-image: url('./img/hero/drops-1.png')"></div>
   <div class="footer__char" style="background-image: url('./img/footer/char.png')"></div>
