Делает полный резиновый адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
           "Главная страница": "main.html",
           // "Страница ошибки": "page-error.html",
         },
+        "Окна": {
+          "Форма": "main.html#online",
+          "Спасибо": "main.html#thanks",
+        }
       };
     </script>
     <style>
