--- a/src/main.html
+++ b/src/main.html
@@ -299,7 +299,7 @@
                     <span class="book__offer-title-icon" style="background-image: url('./img/common/star.png');"></span>
                     <span class="book__offer-title-text">Oнлайн</span>
                   </h3>
-                  <p class="book__offer-desc">Смотри нас в онлайн трансляции на&nbsp;YouTube если, не можешь прийти</p>
+                  <p class="book__offer-desc">Смотри нас в&nbsp;онлайн трансляции на&nbsp;YouTube если, не можешь прийти</p>
                 </div>
                 <button class="button-primary book__offer-button" type="button" data-b_modal-open="online">
                   <span class="button__text">Регистрация</span>
