--- a/src/tpls/mdn/blog-card.html
+++ b/src/tpls/mdn/blog-card.html
@@ -1,10 +1,10 @@
 <article class="blog-card">
   <div class="blog-card__info">
-    <a href="#" class="blog-card__media">
+    <div class="blog-card__media">
       <picture class="blog-card__pic">
       	<img  src="./img/common/loader.svg" data-src="./img/testers/@@img" alt="" class="blog-card__img lazy">
       </picture>
-    </a>
+    </div>
     <h3 class="blog-card__title">
       <a href="#" class="blog-card__link">@@title</a>
     </h3>
