--- a/src/tpls/miri/modal-thanks.html
+++ b/src/tpls/miri/modal-thanks.html
@@ -10,8 +10,8 @@
 		<div class="modal__slogan" style="background-image: url('./img/hero/slogan.png');"></div>
 		<h2 class="modal__title">Спасибо за <br> регистрацию!</h2>
 		<p class="modal__desc">
-			Все новости и ссылка на трансляцию будет <br>
-			в нашем телеграмм-канале, подписывайся!
+			Все новости и&nbsp;ссылка на трансляцию будет <br>
+			в&nbsp;нашем телеграмм-канале, подписывайся!
 		</p>
 		<a href="#" class="button-second modal__button">
 			<span class="button__text">Перейти в ТГ</span>
