Делает вариации главной

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       const catalog = {
         "Общие страницы": {
           "Главная страница": "main.html",
+          "Главная страница, но с выпадайками": "main-dropdowned.html",
           // "Страница ошибки": "page-error.html",
         },
         "Окна": {
