--- a/src/main.html
+++ b/src/main.html
@@ -55,10 +55,7 @@
                   <span class="hero__aside-row-value section-text--stroked">Youtube</span>
                 </p>
               </div>
-<!--               <a href="#register" class="button-primary hero__button">
-                <span class="button__text">Регистрация</span>
-              </a>
- -->              <div class="hero__char" style="background-image: url('./img/hero/hero-char.png');">
+              <div class="hero__char" style="background-image: url('./img/hero/hero-char.png');">
                 <div class="hero__char-buble">
                 </div>
               </div>
@@ -250,25 +247,27 @@
               <span class="section-title__arrow"></span>
               ЗАЯВИ О СЕБЕ
             </h2>
-            <p class="offer__subtitle">
-              После прохождения теории на MCD предлагаем сразу перейти к практике!
-            </p>
-            <p class="offer__slogan section-text--stroked">
-              <span class="offer__slogan-text">ЛОВИ ШАНС ВЫИГРАТЬ ГРАНТ <br> НА ONLINE ОБУЧЕНИЕ!</span>
-            </p>
-            <ul class="offer__list">
-              <li class="offer__step">
-                <span class="section-text--color">Создайте</span>
-                креативную рекламу для Mirinda с теми знаниями, которые вы получили во время лекций Mirinda Creative Day. Это может быть все, <br> что угодно: Reels или рекламный пост.
-              </li>
-              <li class="offer__step">
-                <span class="section-text--color">Публикуйте</span>
-                 в IG и тегайте бренд, покажите, что вы лучше всех <br> и выиграйте грант на online обучение!
-              </li>
-              <li class="offer__step">
-                Длительность конкурса 2 недели! Победителей объявим в инстаграме <span class="section-text--select">@mirinda_belarus</span>
-              </li>
-            </ul>
+            <div class="offer__content">
+              <p class="offer__subtitle">
+                После прохождения теории на MCD предлагаем сразу перейти к практике!
+              </p>
+              <p class="offer__slogan section-text--stroked">
+                <span class="offer__slogan-text">ЛОВИ ШАНС ВЫИГРАТЬ ГРАНТ <br> НА ONLINE ОБУЧЕНИЕ!</span>
+              </p>
+              <ul class="offer__list">
+                <li class="offer__step">
+                  <span class="section-text--color">Создайте</span>
+                  креативную рекламу для Mirinda с теми знаниями, которые вы получили во время лекций Mirinda Creative Day. Это может быть все, <br> что угодно: Reels или рекламный пост.
+                </li>
+                <li class="offer__step">
+                  <span class="section-text--color">Публикуйте</span>
+                   в IG и тегайте бренд, покажите, что вы лучше всех <br> и выиграйте грант на online обучение!
+                </li>
+                <li class="offer__step">
+                  Длительность конкурса 2 недели! Победителей объявим в инстаграме <span class="section-text--select">@mirinda_belarus</span>
+                </li>
+              </ul>
+            </div>
           </div>
         </section>
 
