--- a/src/tpls/miri/modal-form.html
+++ b/src/tpls/miri/modal-form.html
@@ -8,6 +8,7 @@
 			<p class="modal__tag">#креатив</p>
 		</div>
 		<form action="mail.php" class="js_form form">
+			<input type="hidden" name="form" value="@@id">
 			<fieldset class="form__fields">
 				@@include("../input/name.html", {label: true})
 				@@include("../input/calendar.html", {label: true,})
