--- a/src/tpls/miri/modal-thanks.html
+++ b/src/tpls/miri/modal-thanks.html
@@ -1,4 +1,4 @@
-<div class="b_modal modal" id="thanks" data-closer-type="inner">
+<div class="b_modal modal modal-thanks" id="thanks" data-closer-type="inner">
 	<div class="modal__decor-left-top" style="background-image: url('./img/common/lightning.png');"></div>
 	<div class="modal__decor-left-bottom" style="background-image: url('./img/hero/drops-1.png');"></div>
 	<div class="modal__tags section-text--stroked">
