Добавляет ссылку на инст

--- a/src/main.html
+++ b/src/main.html
@@ -252,7 +252,7 @@
                    в IG и тегайте бренд, покажите, что вы лучше всех <br> и выиграйте грант на online обучение!
                 </li>
                 <li class="offer__step">
-                  Длительность конкурса 2 недели! Победителей объявим в инстаграме <span class="section-text--select">@mirinda_belarus</span>
+                  Длительность конкурса 2 недели! Победителей объявим в инстаграме <a href="https://www.instagram.com/mirinda_belarus/" target="_blank" class="section-text--select">@mirinda_belarus</a>
                 </li>
               </ul>
             </div>
