Делает небольшие фиксы

--- a/src/main-dropdowned.html
+++ b/src/main-dropdowned.html
@@ -57,11 +57,9 @@
             </h1>
             <p class="hero__subtitle section-text--stroked">03 АВГУСТА 2023</p>
             <p class="section-desc hero__desc">
-              Эй, Минск, заскучал? 3 августа Mirinda прокачает все <br>
-              современное комьюнити в направлении креатива! Если ты <br>
-              только начинаешь свой путь в креативной индустрии или <br>
-              тебе интересно послушать настоящих экспертов в области <br>
-              создания контента, то ты просто не можешь это пропустить!
+              Эй, Минск! Заскучал? <br>
+              3 августа Mirinda прокачает все современное комьюнити в направлении креатива! <br>
+              Если ты только начинаешь свой путь в креативной индустрии или тебе интересно послушать трендсеттеров в создании контента, ты просто не можешь это пропустить! <br>
             </p>
           </div>
         </section>
@@ -99,7 +97,7 @@
                   <h3 class="speakers-card__title">
                     <a href="#" target="_blank" class="speakers-card__link">Олег <br> Атякшев</a>
                   </h3>
-                  <p class="speakers-card__desc">продюсер продакшен-студии <br> Partizan</p>
+                  <p class="speakers-card__desc">продюсер Partizan Production <br> и Gipsy Films</p>
                 </article>
                 <article class="speakers-card">
                   <div class="decor-ui speakers-card__decor-ui"></div>
@@ -111,7 +109,7 @@
                   <h3 class="speakers-card__title">
                     <a href="#" target="_blank" class="speakers-card__link">Влад <br> Киреев</a>
                   </h3>
-                  <p class="speakers-card__desc">таргетолог, с жизнью о которой мы все мечтаем</p>
+                  <p class="speakers-card__desc">таргетолог, с жизнью о которой <br> мы все мечтаем</p>
                 </article>
                 <article class="speakers-card">
                   <div class="decor-ui speakers-card__decor-ui"></div>
@@ -123,7 +121,7 @@
                   <h3 class="speakers-card__title">
                     <a href="#" target="_blank" class="speakers-card__link">Савва <br> Абушкевич</a>
                   </h3>
-                  <p class="speakers-card__desc">креатор и организатор самой популярной вечеринки Минска - Montana</p>
+                  <p class="speakers-card__desc">креатор и организатор самой популярной вечеринки Минска  MONTANA </p>
                 </article>
                 <article class="speakers-card">
                   <div class="decor-ui speakers-card__decor-ui"></div>
@@ -135,7 +133,7 @@
                   <h3 class="speakers-card__title">
                     <a href="#" target="_blank" class="speakers-card__link">Настя <br> Самойлович</a>
                   </h3>
-                  <p class="speakers-card__desc">сет-стилист и человек-эстетика</p>
+                  <p class="speakers-card__desc">сет-стилист и человек-«эстетика»</p>
                 </article>
                 <article class="speakers-card">
                   <div class="decor-ui speakers-card__decor-ui"></div>
@@ -170,62 +168,46 @@
                 <div class="programm__line">
                   <p class="programm__line-time">
                     <span class="decor-ui programm__line-decor-ui"></span>
-                    13.00-13.55
+                    14.15-14.50
                   </p>
                   <p class="programm__line-desc">
-                    <span class="section-text--bold">Лиза Ходаренок</span>
-                    “Как развитие своего блога, делает ее еще более ценным кадром для компании”
+                    Лиза Ходаренок расскажет, как сохранять work-life balance и как контент может стать стилем жизни. 
                   </p>
                 </div>
                 <div class="programm__line">
                   <p class="programm__line-time">
                     <span class="decor-ui programm__line-decor-ui"></span>
-                    14.00-14.55
+                    14.55-15.30
                   </p>
-                  <p class="programm__line-desc">
-                    <span class="section-text--bold">Олег Атякшев</span>
-                    “О продюсирование рекламы и клипов с большими бюджетами, как работает профессиональный продакшн, из кого состоит команда и как он сам в нее попал”
-                  </p>
+                  <p class="programm__line-desc">Маша Чигур поделится секретом, как чувствовать себя раскрепощенно перед камерой и помочь другим раскрыться на площадке.</p>
                 </div>
                 <div class="programm__line">
                   <p class="programm__line-time">
                     <span class="decor-ui programm__line-decor-ui"></span>
-                    15.00-15.55
+                    15.35-16.10
                   </p>
-                  <p class="programm__line-desc">
-                    <span class="section-text--bold">Влад Киреев </span>
-                    “Как работать из самых красивых точек планеты и заниматься таргетированной рекламой”
-                  </p>
+                  <p class="programm__line-desc">Влад Киреев, скорее всего, заставит вас завидовать, ведь он расскажет как уйти на фриланс и работать из самых красивых точек планеты.</p>
                 </div>
                 <div class="programm__line">
                   <p class="programm__line-time">
                     <span class="decor-ui programm__line-decor-ui"></span>
-                    16.00-16.55
+                    16.15-16.45
                   </p>
-                  <p class="programm__line-desc">
-                    <span class="section-text--bold">Савва Абушкевич</span>
-                    “как зайти в маркетинг с нуля, когда у тебя НЕТ ОПЫТА”
-                  </p>
+                  <p class="programm__line-desc">Савва расскажет как стать КЕМ-ТО в SMM, когда у тебя нет опыта, но есть желание!</p>
                 </div>
                 <div class="programm__line">
                   <p class="programm__line-time">
                     <span class="decor-ui programm__line-decor-ui"></span>
-                    17.00-17.55
+                    17.25-18.00
                   </p>
-                  <p class="programm__line-desc">
-                    <span class="section-text--bold">Настя Самойлович</span>
-                    “Про уть от предметного фотографа со своим уникальным стилем, до работы сет-дизайнером”
-                  </p>
+                  <p class="programm__line-desc">Олег Атякшев замотивирует вас заняться саморазвитием и расскажет, как работает профессиональный продакшн.</p>
                 </div>
                 <div class="programm__line">
                   <p class="programm__line-time">
                     <span class="decor-ui programm__line-decor-ui"></span>
-                    18.00-18.55
+                    18.05-18.40
                   </p>
-                  <p class="programm__line-desc">
-                    <span class="section-text--bold">Мари Чигур</span>
-                    “Как чувствовать себя комфортно перед камерой, как раскрыть свой внутренний мир”
-                  </p>
+                  <p class="programm__line-desc">Настя Самойлович поделится своим взглядом на поиск цели и пути в креативных индустриях.</p>
                 </div>
               </div>
             </div>
@@ -248,7 +230,7 @@
                   После прохождения теории на MCD предлагаем сразу перейти к практике!
                 </p>
                 <p class="offer__slogan section-text--stroked">
-                  <span class="offer__slogan-text">ЛОВИ ШАНС ВЫИГРАТЬ ГРАНТ <br> НА ONLINE ОБУЧЕНИЕ!</span>
+                  <span class="offer__slogan-text"> ЛОВИ ШАНС ВЫИГРАТЬ ГРАНТ <br> НА ONLINE ОБУЧЕНИЕ!</span>
                 </p>
                 <ul class="offer__list">
                   <li class="offer__step">
@@ -283,7 +265,8 @@
                       <span class="book__offer-title-text">Oффлайн</span>
                     </h3>
                     <p class="book__offer-desc">
-                      Хочешь послушать спикеров в живую? Тогда регистрируйся тут. Поспеши, всего 180 мест
+                      Хочешь послушать спикеров в живую? Тогда регистрируйся тут. Поспеши, всего 180 мест <br>
+                      В пространстве ЦЕХ вас будут ждать спикеры и розыгрыши разных призов. Поспеши, всего 180 мест
                     </p>
                   </div>
                   <button class="button-primary book__offer-button" type="button" data-b_modal-open="offline">
@@ -328,7 +311,7 @@
                     </div>
                     <p class="faq-card__answer-text">
                       Минск<br>
-                      культурное пространство ЦЕХ. <br>
+                      культурное пространство <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3Mjc3MzA2Mjc0NzI2?story_media_id=3094757120669886632&igshid=OGIzYTJhMTRmYQ==" target="_blank" class="section-text--underlined">ЦЕХ.</a> <br>
                       03 августа 2023
                     </p>
                   </div>
