Немного меняет дизайн

--- a/src/main-dropdowned.html
+++ b/src/main-dropdowned.html
@@ -2,8 +2,8 @@
 <html lang="ru-RU">
   <head>
     @@include('tpls/b/meta-head.html',{
-      "title": "MIRINDA CREATIVE DAY, 03 августа 2023",
-      "desc": "Эй, Минск, заскучал? 3 августа Mirinda прокачает все современное комьюнити в направлении креатива! Если ты только начинаешь свой путь в креативной индустрии или тебе интересно послушать настоящих экспертов в области создания контента, то ты просто не можешь это пропустить!",
+      "title": "MIRINDA CREATIVE DAY, 17 августа 2023",
+      "desc": "Эй, Минск, заскучал? 17 августа Mirinda прокачает все современное комьюнити в направлении креатива! Если ты только начинаешь свой путь в креативной индустрии или тебе интересно послушать настоящих экспертов в области создания контента, то ты просто не можешь это пропустить!",
       "themeColor": "#FFC600",
     })
     <link rel="stylesheet" href="./css/style.css">
@@ -31,7 +31,7 @@
               </div>
               <div class="hero__aside">
                 <div class="decor-ui hero__aside-decor-ui"></div>
-                <p class="hero__aside-date">03/08:</p>
+                <p class="hero__aside-date">17/08:</p>
                 <p class="hero__aside-row">
                   <span class="hero__aside-row-title">Offline</span>
                   <span class="hero__aside-row-value">
@@ -55,10 +55,10 @@
               <span class="section-title__arrow"></span>
               MIRINDA CREATIVE DAY
             </h1>
-            <p class="hero__subtitle section-text--stroked">03 АВГУСТА 2023</p>
+            <p class="hero__subtitle section-text--stroked">17 АВГУСТА 2023</p>
             <p class="section-desc hero__desc">
               Эй, Минск! Заскучал? <br>
-              3 августа Mirinda прокачает все современное комьюнити в направлении креатива! <br>
+              17 августа Mirinda прокачает все современное комьюнити в направлении креатива! <br>
               Если ты только начинаешь свой путь в креативной индустрии или тебе интересно послушать трендсеттеров в создании контента, ты просто не можешь это пропустить! <br>
             </p>
           </div>
@@ -265,8 +265,7 @@
                       <span class="book__offer-title-text">Oффлайн</span>
                     </h3>
                     <p class="book__offer-desc">
-                      Хочешь послушать спикеров в живую? Тогда регистрируйся тут. Поспеши, всего 180 мест <br>
-                      В пространстве ЦЕХ вас будут ждать спикеры и розыгрыши разных призов. Поспеши, всего 180 мест
+                      В пространстве ЦЕХ вас ждут увлекательные выступления спикеров и возможность выиграть ценные призы, яркая и динамичная атмосфера, полная энергии и вдохновения. Вы сможете общаться с единомышленниками, делиться опытом и находить новые идеи. Поспеши, всего 180 мест.
                     </p>
                   </div>
                   <button class="button-primary book__offer-button" type="button" data-b_modal-open="offline">
@@ -279,7 +278,9 @@
                       <span class="book__offer-title-icon" style="background-image: url('./img/common/star.png');"></span>
                       <span class="book__offer-title-text">Oнлайн</span>
                     </h3>
-                    <p class="book__offer-desc">Смотри нас в&nbsp;онлайн трансляции на&nbsp;YouTube если, не можешь прийти</p>
+                    <p class="book__offer-desc">
+                      Мы не привязываемся к определенному месту! Где бы ты ни находился, выбирай понравившихся спикеров и смотри нас в онлайн-трансляции на YouTube. Ссылка будет в нашем телеграм-канале в день мероприятия. Переходи, чтобы ничего не пропустить.
+                    </p>
                   </div>
                   <button class="button-primary book__offer-button" type="button" data-b_modal-open="online">
                     <span class="button__text">Регистрация</span>
@@ -312,7 +313,7 @@
                     <p class="faq-card__answer-text">
                       Минск<br>
                       культурное пространство <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3Mjc3MzA2Mjc0NzI2?story_media_id=3094757120669886632&igshid=OGIzYTJhMTRmYQ==" target="_blank" class="section-text--underlined">ЦЕХ.</a> <br>
-                      03 августа 2023
+                      17 августа 2023
                     </p>
                   </div>
                 </div>
